force-app/main/default/objects/Forrester_SHIR_AGR_CASE_COMMENT__x/Forrester_SHIR_AGR_CASE_COMMENT__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_AGR_CASE_COMMENT</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_AGR_CASE_COMMENT</externalName>
    <label>Forrester_SHIR_AGR_CASE_COMMENT</label>
    <pluralLabel>Forrester_SHIR_AGR_CASE_COMMENT</pluralLabel>
</CustomObject>