force-app/main/default/objects/Forrester_SHIR_AGR_CASE_COMMENT__x/fields/AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_RECID__c</fullName>
    <description>AGREEMENT_RECID</description>
    <externalDeveloperName>AGREEMENT_RECID</externalDeveloperName>
    <label>Agreement Recid</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>