force-app/main/default/objects/Forrester_SHIR_AGR_CASE_COMMENT__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>Case Recid</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>