force-app/main/default/objects/Forrester_SHIR_AGR_CASE_COMMENT__x/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>COMMENTS</description>
    <externalDeveloperName>COMMENTS</externalDeveloperName>
    <label>Comment</label>
    <length>1000</length>
    <type>Text</type>
</CustomField>